--- a/style.css
+++ b/style.css
@@ -4,20 +4,12 @@
   box-sizing: border-box;
   font-family: 'Roboto', sans-serif;
 }
-html, body {
-  height: 100%;
-  width: 100%;
-  margin: 0;
-  padding: 0;
-  overflow-x: hidden;
-  text-wrap: wrap;
-}
 body {
-  flex-direction: column;
+  opacity: 0;
   background-color:#ffffff;
   overflow-x: hidden;
   transition: opacity .3s;
-  
+
 }
 @keyframes bounce {
   0% {
@@ -829,8 +821,8 @@ table {
 
 #chaticon2 {
   position: fixed;
-  bottom: 5px;
-  right: 5px;
+  bottom: 10px;
+  right: 10px;
   opacity: 1;
   z-index:10000;
 
