--- a/style.css
+++ b/style.css
@@ -11,6 +11,68 @@ body {
   transition: opacity .3s;
 
 }
+
+#mydiv {
+  position: fixed;
+  display:none;
+  width:40vw;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  height:60vh;
+  opacity:0;
+  right:25px;
+  border-radius: 15px;
+  z-index: 998;
+  background-color: #f1f1f1;
+  border: 1px solid #d3d3d3;
+  text-align: center;
+}
+.myDi{
+  animation: myDi 0.5s ease;
+}
+@keyframes myDi{
+  0%{
+    opacity:0;
+  }
+  100%{
+    opacity:1;
+  }
+}
+.cDi{
+  animation: cDi 0.5s ease;
+}
+@keyframes cDi{
+  0%{
+    opacity:1;
+  }
+  100%{
+    opacity:0;
+  }
+}
+
+
+#mydivheader {
+  -moz-border-radius: 0px;
+  -webkit-border-radius: 3px 3px 0px 0px;
+  border-radius: 3px 3px 0px 0px; 
+  padding: 10px;
+  cursor: move;
+  background-color: #2196F3;
+  color: #fff;
+}
+
+
+.popup-content {
+  padding: 20px;
+}
+
+#chaticon2 {
+  position: fixed;
+  bottom: 10px;
+  right: 10px;
+  opacity: 1;
+  z-index:10000;
+
+}
 @keyframes bounce {
   0% {
     opacity: 0;
@@ -522,6 +584,42 @@ table {
   margin-bottom: 10px;
   padding: 10px;
   overflow-y: auto;
+}
+sidetoside {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 30px;
+  width: 100%;
+  height: auto;
+  padding: 0 10px;
+  flex-wrap: wrap;
+}
+
+#s2s{
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
+  position:relative;
+  z-index:990;
+  width:100%;
+  padding:20px;
+  padding-bottom:50px;
+  padding-top:50px;
+
+  height:auto;
+  background-color: #94cbf5;
+}
+footer {
+  margin-top: auto;
+  text-align: center;
+  padding: 20px;
+  background-color: rgba(0,0,0,0.8);
+  color: white;
+  font-size: 70%;
+  box-shadow: 0 -19px 19px 2px rgba(0, 0, 0, 0.1);
+}
+
+footer a {
+color: white;
 }
 #chat{
   display:flex;
